WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292641
Seeing "Promise rejected with error: undefined" for every failed `browser.test.assert...` call in WPT test
https://bugs.webkit.org/show_bug.cgi?id=292641
Summary
Seeing "Promise rejected with error: undefined" for every failed `browser.tes...
Kiara Rose
Reported
2025-05-06 16:28:34 PDT
rdar://150804691
Attachments
Add attachment
proposed patch, testcase, etc.
Kiara Rose
Comment 1
2025-05-06 16:35:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45035
EWS
Comment 2
2025-05-07 13:13:47 PDT
Committed
294629@main
(b9c30151741e): <
https://commits.webkit.org/294629@main
> Reviewed commits have been landed. Closing PR #45035 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug