Seeing "Promise rejected with error: undefined" for every failed `browser.test.assert...` call https://bugs.webkit.org/show_bug.cgi?id=292641 rdar://150804691

Reviewed by Timothy Hatcher.

Use the message passed along to the browser.test.assert call if an error isn't generated when the
assertion failed. If a message isn't passed along, then return "Promise rejected without an error".

* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPITestCocoa.mm:
(WebKit::WebExtensionAPITest::assertTrue):
(WebKit::WebExtensionAPITest::assertDeepEq):
(WebKit::WebExtensionAPITest::assertEquals):
(WebKit::WebExtensionAPITest::startNextTest):
* Source/WebKit/WebProcess/Extensions/API/WebExtensionAPITest.h:
(WebKit::WebExtensionAPITest::recordAssertionIfNeeded):

Canonical link: https://commits.webkit.org/294629@main